test: 기존 테스트 버그 수정 및 랭킹 테스트 추가